Version 40.5 - shop fixes + scrollbar

--- a/css/upgr.css
+++ b/css/upgr.css
@@ -273,3 +273,12 @@ ul li a{
 ul li:hover a{
   color: #44dd44;
 }
+
+::-webkit-scrollbar{
+  background: transparent;
+  width: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(transparent, #00ec00);
+  border-radius: 0 0 0.5rem 0.5rem;
+}
